[tool.poetry]
name = "cluster_health_prediction"
version = "0.1.0"
description = "health risk prediction with ML, XGBoost, LightGBM, PyTorch and ensemble modeling."
authors = ["AntonShih <anton.shih7@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "=3.10"

# 核心工具
numpy = "^1.24"
pandas = "^1.5"
scikit-learn = "^1.3"
xgboost = "^1.7"
lightgbm = "^4.1"
torch = "^2.1"
joblib = "^1.3"

# 視覺化
matplotlib = "^3.7"
seaborn = "^0.12"
plotly = "^5.16"

# 解釋性工具（選配）
shap = "^0.43"

# 輔助工具
tqdm = "^4.66"
typer = "^0.9"
imbalanced-learn = "^0.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

